@@ -1,3 +1,10 @@
+2011-09-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/pic16/gen.c,
+	  src/pic14/gen.c,
+	  device/include/stdbool.h:
+	  _Bool support for the pics.
+
 2011-09-19 Raphael Neider <rneider AT web.de>
 
 	* device/lib/pic16/libio/adc/adcopen.c:
